--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,16 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  riverpod: ^2.1.1
+  flutter_riverpod: ^2.1.1
+  freezed_annotation: ^2.2.0
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  freezed: ^2.3.2
+  build_runner: ^2.3.3
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
