--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_riverpod: ^2.1.1
   freezed_annotation: ^2.2.0
   uuid: ^3.0.7
+  flutter_datetime_picker: ^1.5.1
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
