--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   uuid: ^3.0.7
   flutter_datetime_picker: ^1.5.1
   intl: ^0.18.0
+  flutter_local_notifications: ^13.0.0
+  flutter_native_timezone: ^2.0.0
+  flutter_app_badger: ^1.5.0
 
 dev_dependencies:
   flutter_test:
